welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:8: error: value lengh is not a member of Array[java.awt.Color]
T(T.lengh-1)=getCouleurSol
    ^Array2:19: error: value lenght is not a member of Array[java.awt.Color]
		setCouleurBrosse(T((i+decalage)%T.lenght))
                                                  ^Array2:23: error: value lenght is not a member of Array[java.awt.Color]
	setCouleurBrosse(T((T.lenght-1+decalage)%T.lenght))
                              ^Array2:24: error: not found: value levebrosse
	levebrosse
        ^